--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Vida das mulheres</title>
 </head>
 <body>
   <header class="menu1">
-
+    <title>No universo das mulheres, ainda existe muito preconceito e desrespeito na questão de serem assediadas 
+      em empregos, dentro de casa, na rua e em outros diversos lugares, ganharem muitas vezes um salário menor do que os
+    homens, tendo a visão pela sociedade como donas de casa</title>
   </header>
-  <section class="menu2">
+  <section class="painel1">
     Universo "real" das mulheres
   </section>
 </body>
