--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   homens, tendo a visão pela sociedade como donas de casa
  </p>
   <section class="painel1">
-    Universo r das mulheres
+    Universo das mulheres
   </section>
   <footer class="rodape">
 
