--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="geral.css">
     <title>Vida das mulheres</title>
 </head>
 <body>
   <header class="menu1">
    <h1>O mundo das mulheres</h1>
+   <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="#">painel1</a></li>
+    <li><a href="#">painel2</a></li>
+    <li><a href="#">painel3</a></li>
+   </ul>
   </header>
-  <p> No universo das mulheres, ainda existe muito preconceito e desrespeito na questão de serem assediadas 
-    em empregos, dentro de casa, na rua e em outros diversos lugares, ganharem muitas vezes um salário menor do que os
-  homens, tendo a visão pela sociedade como donas de casa
- </p>
-  <section class="painel1">
+ 
+  <section class="conteudo1">
     Universo "real" das mulheres
   </section>
   <footer class="rodape">
