--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 </head>
 <body>
   <header class="menu1">
-   <h1>O mundo das mulheres</h1>
-   <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="#">painel1</a></li>
-    <li><a href="#">painel2</a></li>
-    <li><a href="#">painel3</a></li>
-   </ul>
+    <h1>O mundo das mulheres</h1>
+    <ul>
+      <li><a href="index.html">Menu</a></li>
+      <li><a href="#">painel1</a></li>
+      <li><a href="#">painel2</a></li>
+      <li><a href="#">painel3</a></li>
+    </ul>
+
   </header>
- 
   <section class="conteudo1">
-    Universo "real" das mulheres
+    <p> No universo das mulheres, ainda existe muito preconceito e desrespeito na questão de serem assediadas 
+      em empregos, dentro de casa, na rua e em outros diversos lugares, ganharem muitas vezes um salário menor do que os
+    homens, tendo a visão pela sociedade como donas de casa
+   </p>
   </section>
   <footer class="rodape">
 
