--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
     homens, tendo a visão pela sociedade como donas de casa
    </p>
   </section>
+  <footer class="rodape">
+
+  </footer>
 </body>
 </html>
