--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
     <title>Vida das mulheres</title>
 </head>
 <body>
-  <header class="menu1">
+  <header id="menu1">
     <h1>O mundo das mulheres</h1>
     <ul>
       <li><a href="index.html">Menu</a></li>
-      <li><a href="#">painel1</a></li>
-      <li><a href="#">painel2</a></li>
-      <li><a href="#">painel3</a></li>
+      <li><a href="assunto1.html">painel1</a></li>
+      <li><a href="assunto2.html">painel2</a></li>
+      <li><a href="assunto3.html">painel3</a></li>
     </ul>
 
   </header>
-  <section class="conteudo1">
-    <p> No universo das mulheres, ainda existe muito preconceito e desrespeito na questão de serem assediadas 
+ <section class="conteudo1">
+    <p> 
+      No universo das mulheres, ainda existe muito preconceito e desrespeito na questão de serem assediadas 
       em empregos, dentro de casa, na rua e em outros diversos lugares, ganharem muitas vezes um salário menor do que os
-    homens, tendo a visão pela sociedade como donas de casa
+    homens, tendo a visão pela sociedade como donas de casa.
    </p>
   </section>
-  <footer class="rodape">
 
+  <footer class="rodape">
+    <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan</p>
+    <p>2°I - 2023</p>
   </footer>
 </body>
 </html>
