--- a/assunto1.html
+++ b/assunto1.html
@@ -10,16 +10,24 @@
 <body>
     <header class="assunto01">
         <h1>Desafio das mulheres na atualidade</h1>
-    <ul>
-        <li><a href="index.html">Menu</a></li>
-        <li><a href="assunto1.html">painel1</a></li>
-        <li><a href="assunto2.html">painel2</a></li>
-        <li><a href="assunto3.html">painel3</a></li>
-      </ul>
+        <div class="menuPrincipal">
+            <ul>
+                <li><a href="index.html">Menu</a></li>
+                <li><a href="assunto1.html">painel1</a></li>
+                <li><a href="assunto2.html">painel2</a></li>
+                <li><a href="assunto3.html">painel3</a></li>
+              </ul>  
+            </div>
     </header>
-    <section class="">
+    <section class="desafio">
         É inegável que o século XX representou um grande avanço em relação aos direitos das mulheres. A constituição de 1934, por exemplo, promoveu, pela primeira vez, a igualdade entre os sexos.
          Já ao longo do século, as mulheres conquistaram através de muitas lutas outro direitos fundamentais, como a possibilidade de votar e ser votada, assim como a proibição da diferença salarial por motivo de sexo.
     </section>
+    <footer class="rodape">
+        <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan
+            2°I - 2023
+        </p>
+        
+      </footer>
 </body>
 </html>
