--- a/assunto2.html
+++ b/assunto2.html
@@ -8,17 +8,26 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>A desigualdade de gênero</h1>
+    <div class="menuPrincipal">
     <ul>
         <li><a href="index.html">Menu</a></li>
         <li><a href="assunto1.html">painel1</a></li>
         <li><a href="assunto2.html">painel2</a></li>
         <li><a href="assunto3.html">painel3</a></li>
       </ul>  
+    </div>
       <section class="desigualdade">
       A desigualdade salarial entre homens e mulheres é uma realidade que assombra praticamente todos os países do mundo. 
       Estamos falando de séculos de reprodução de valores que excluem, inferiorizam ou invisibilizam o papel da mulher no mercado de trabalho, na prática, estes indicadores materializam-se em números que mostram,
       por exemplo, que mesmo sendo maioria no país, as mulheres são minoria na política brasileira, ocupando apenas 15% dos cargos eletivo, ou que elas ganham,
       em média, 20% menos que os homens ainda que ocupem o mesmo cargo e tenham mesmo perfil de escolaridade
       </section>
+      <footer class="rodape">
+        <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan
+            2°I - 2023
+        </p>
+        
+      </footer>
 </body>
 </html>
