--- a/assunto3.html
+++ b/assunto3.html
@@ -8,14 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">Menu</a></li>
-        <li><a href="assunto1.html">painel1</a></li>
-        <li><a href="assunto2.html">painel2</a></li>
-        <li><a href="assunto3.html">painel3</a></li>
-      </ul>
+    <div class="menuPrincipal">
+        <ul>
+            <li><a href="index.html">Menu</a></li>
+            <li><a href="assunto1.html">painel1</a></li>
+            <li><a href="assunto2.html">painel2</a></li>
+            <li><a href="assunto3.html">painel3</a></li>
+          </ul>  
+        </div>
       <section class="">
     
       </section>
+      <footer class="rodape">
+        <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan
+            2°I - 2023
+        </p>
+        
+      </footer>
 </body>
 </html>
