--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 <body>
   <header id="menu1">
     <h1>O mundo das mulheres</h1>
-    <ul>
-      <li><a href="index.html">Menu</a></li>
-      <li><a href="assunto1.html">painel1</a></li>
-      <li><a href="assunto2.html">painel2</a></li>
-      <li><a href="assunto3.html">painel3</a></li>
-    </ul>
+    <div class="menuPrincipal">
+      <ul>
+          <li><a href="index.html">Menu</a></li>
+          <li><a href="assunto1.html">painel1</a></li>
+          <li><a href="assunto2.html">painel2</a></li>
+          <li><a href="assunto3.html">painel3</a></li>
+        </ul>  
+      </div>
 
   </header>
  <section class="conteudo1">
@@ -27,8 +29,10 @@
   </section>
   
   <footer class="rodape">
-    <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan</p>
-    <p>2°I - 2023</p>
+    <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan
+      2°I - 2023
+  </p>
+  
   </footer>
 </body>
 </html>
