--- a/assunto1.html
+++ b/assunto1.html
@@ -11,12 +11,14 @@
     <header class="assunto01">
         <h1>Desafio das mulheres na atualidade</h1>
         <div class="menuPrincipal">
+        </nav>
             <ul>
                 <li><a href="index.html">Menu</a></li>
                 <li><a href="assunto1.html">painel1</a></li>
                 <li><a href="assunto2.html">painel2</a></li>
                 <li><a href="assunto3.html">painel3</a></li>
               </ul>  
+         </nav>
             </div>
     </header>
     <section class="desafio">
