--- a/assunto2.html
+++ b/assunto2.html
@@ -10,13 +10,15 @@
 <body>
     <h1>A desigualdade de gênero</h1>
     <div class="menuPrincipal">
-    <ul>
-        <li><a href="index.html">Menu</a></li>
-        <li><a href="assunto1.html">painel1</a></li>
-        <li><a href="assunto2.html">painel2</a></li>
-        <li><a href="assunto3.html">painel3</a></li>
-      </ul>  
-    </div>
+    </nav>
+        <ul>
+            <li><a href="index.html">Menu</a></li>
+            <li><a href="assunto1.html">painel1</a></li>
+            <li><a href="assunto2.html">painel2</a></li>
+            <li><a href="assunto3.html">painel3</a></li>
+          </ul>  
+     </nav>
+        </div>
       <section class="desigualdade">
       A desigualdade salarial entre homens e mulheres é uma realidade que assombra praticamente todos os países do mundo. 
       Estamos falando de séculos de reprodução de valores que excluem, inferiorizam ou invisibilizam o papel da mulher no mercado de trabalho, na prática, estes indicadores materializam-se em números que mostram,
