--- a/assunto3.html
+++ b/assunto3.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div class="menuPrincipal">
+    </nav>
         <ul>
             <li><a href="index.html">Menu</a></li>
             <li><a href="assunto1.html">painel1</a></li>
             <li><a href="assunto2.html">painel2</a></li>
             <li><a href="assunto3.html">painel3</a></li>
           </ul>  
+     </nav>
         </div>
       <section class="">
     
