--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
   <header id="menu1">
     <h1>O mundo das mulheres</h1>
     <div class="menuPrincipal">
+      <nav>
       <ul>
           <li><a href="index.html">Menu</a></li>
           <li><a href="assunto1.html">painel1</a></li>
           <li><a href="assunto2.html">painel2</a></li>
           <li><a href="assunto3.html">painel3</a></li>
         </ul>  
+      </nav>
       </div>
-
+  
   </header>
  <section class="conteudo1">
     <p> 
