--- a/assunto1.html
+++ b/assunto1.html
@@ -21,7 +21,7 @@
          </nav>
             </div>
     </header>
-    <section class="desafio">
+    <section class="conteudo">
         É inegável que o século XX representou um grande avanço em relação aos direitos das mulheres. A constituição de 1934, por exemplo, promoveu, pela primeira vez, a igualdade entre os sexos.
          Já ao longo do século, as mulheres conquistaram através de muitas lutas outro direitos fundamentais, como a possibilidade de votar e ser votada, assim como a proibição da diferença salarial por motivo de sexo.
     </section>
