--- a/assunto2.html
+++ b/assunto2.html
@@ -19,7 +19,7 @@
           </ul>  
      </nav>
         </div>
-      <section class="desigualdade">
+      <section class="conteudo">
       A desigualdade salarial entre homens e mulheres é uma realidade que assombra praticamente todos os países do mundo. 
       Estamos falando de séculos de reprodução de valores que excluem, inferiorizam ou invisibilizam o papel da mulher no mercado de trabalho, na prática, estes indicadores materializam-se em números que mostram,
       por exemplo, que mesmo sendo maioria no país, as mulheres são minoria na política brasileira, ocupando apenas 15% dos cargos eletivo, ou que elas ganham,
