--- a/assunto3.html
+++ b/assunto3.html
@@ -18,7 +18,7 @@
           </ul>  
      </nav>
         </div>
-      <section class="">
+      <section class="conteudo">
     
       </section>
       <footer class="rodape">
