--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
   <header id="menu1">
-    <h1>O mundo das mulheres</h1>
     <div class="menuPrincipal">
       <nav>
       <ul>
@@ -22,13 +21,18 @@
       </div>
   
   </header>
- <section class="conteudo">
-    <p> 
+ <div class="conteudo">
+  <h1>O mundo das mulheres</h1>
+    <h3> 
       No universo das mulheres, ainda existe muito preconceito e desrespeito na questão de serem assediadas 
       em empregos, dentro de casa, na rua e em outros diversos lugares, ganharem muitas vezes um salário menor do que os
     homens, tendo a visão pela sociedade como donas de casa.
-   </p>
-  </section>
+    </h3>
+ </div>
+ <div class="caixa1"></div>
+ <div class="caixa2"></div>
+ <div class="caixa3"></div>
+ <div class="caixa4"></div>
   
   <footer class="rodape">
     <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan
