--- a/assunto2.html
+++ b/assunto2.html
@@ -19,12 +19,14 @@
           </ul>  
      </nav>
         </div>
-      <section class="conteudo">
-      A desigualdade salarial entre homens e mulheres é uma realidade que assombra praticamente todos os países do mundo. 
+      <div class="conteudo">
+        <h1>A desigualdade de gênero</h1>
+     <h2> A desigualdade salarial entre homens e mulheres é uma realidade que assombra praticamente todos os países do mundo. 
       Estamos falando de séculos de reprodução de valores que excluem, inferiorizam ou invisibilizam o papel da mulher no mercado de trabalho, na prática, estes indicadores materializam-se em números que mostram,
       por exemplo, que mesmo sendo maioria no país, as mulheres são minoria na política brasileira, ocupando apenas 15% dos cargos eletivo, ou que elas ganham,
       em média, 20% menos que os homens ainda que ocupem o mesmo cargo e tenham mesmo perfil de escolaridade
-      </section>
+    </h2>
+      </div>
       <footer class="rodape">
         <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan
             2°I - 2023
