--- a/assunto1.html
+++ b/assunto1.html
@@ -21,10 +21,12 @@
          </nav>
             </div>
     </header>
-    <section class="conteudo">
-        É inegável que o século XX representou um grande avanço em relação aos direitos das mulheres. A constituição de 1934, por exemplo, promoveu, pela primeira vez, a igualdade entre os sexos.
+    <div class="conteudo">
+        <h1>Desafio das mulheres na atualidade</h1>
+       <h2> É inegável que o século XX representou um grande avanço em relação aos direitos das mulheres. A constituição de 1934, por exemplo, promoveu, pela primeira vez, a igualdade entre os sexos.
          Já ao longo do século, as mulheres conquistaram através de muitas lutas outro direitos fundamentais, como a possibilidade de votar e ser votada, assim como a proibição da diferença salarial por motivo de sexo.
-    </section>
+        </h2>
+    </div>
     <footer class="rodape">
         <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan
             2°I - 2023
