--- a/assunto3.html
+++ b/assunto3.html
@@ -22,7 +22,8 @@
           <h1>Tragetória da luta dos direitos</h1>
       
           <h2>Nesta página vamos tratar sobre como foi a luta dos direitos das mulheres e para saber mais 
-            é só clicar no <link rel="stylesheet" href="https://www.sescrio.org.br/noticias/assistencia/marco-delas-conheca-a-trajetoria-das-lutas-pelos-direitos-das-mulheres-no-brasil/">
+            é só clicar no link abaixo
+             <link rel="stylesheet" href="https://www.sescrio.org.br/noticias/assistencia/marco-delas-conheca-a-trajetoria-das-lutas-pelos-direitos-das-mulheres-no-brasil/">
           </h2>
       
           </div>
