--- a/assunto1.html
+++ b/assunto1.html
@@ -13,10 +13,10 @@
         <div class="menuPrincipal">
         </nav>
             <ul>
-                <a href="index.html">Menu</a>
-                <a href="assunto1.html">painel1</a>
-                <a href="assunto2.html">painel2</a>
-                <a href="assunto3.html">painel3</a>
+                <li><a href="index.html">Menu</a></li>
+                <li><a href="assunto1.html">painel1</a></li>
+                <li><a href="assunto2.html">painel2</a></li>
+                <li><a href="assunto3.html">painel3</a></li>
               </ul>  
          </nav>
             </div>
