--- a/assunto3.html
+++ b/assunto3.html
@@ -23,8 +23,8 @@
       
           <h2>Nesta página vamos tratar sobre como foi a luta dos direitos das mulheres e para saber mais 
             é só clicar no link abaixo
-             <link rel="stylesheet" href="https://www.sescrio.org.br/noticias/assistencia/marco-delas-conheca-a-trajetoria-das-lutas-pelos-direitos-das-mulheres-no-brasil/">
-          </h2>
+            <a href="https://www.sescrio.org.br/noticias/assistencia/marco-delas-conheca-a-trajetoria-das-lutas-pelos-direitos-das-mulheres-no-brasil/">segue o link</a>
+           </h2>
       
           </div>
       <footer class="rodape">
