--- a/assunto2.html
+++ b/assunto2.html
@@ -20,6 +20,11 @@
         </div>
       <div class="conteudo">
         <h1>A desigualdade de gênero</h1>
+        <h3>origem da desigualdade salarial</h3>
+        <h2>Os gregos eram considerados iguais, ou seja, dignos de participarem da política pública, todos aqueles que eram maiores de idade,naturais da Grécia,
+           livres (não-escravizados) e do sexo masculino. As mulheres, em específico, eram vistas como subordinadas aos chefes de família, sem deveres laborais, suas únicas funções eram cuidar dos filhos e procriar. 
+            Mesmo entre a nobreza e a realeza, mulheres não participavam ativamente de nenhum tipo de trabalho na esfera pública. As que buscavam uma independência financeira de pais ou maridos eram hostilizadas, marginalizadas ou até mesmo vistas como bruxas.</h2>
+            
      <h2> A desigualdade salarial entre homens e mulheres é uma realidade que assombra praticamente todos os países do mundo. 
       Estamos falando de séculos de reprodução de valores que excluem, inferiorizam ou invisibilizam o papel da mulher no mercado de trabalho, na prática, estes indicadores materializam-se em números que mostram,
       por exemplo, que mesmo sendo maioria no país, as mulheres são minoria na política brasileira, ocupando apenas 15% dos cargos eletivo, ou que elas ganham,
