--- a/assunto3.html
+++ b/assunto3.html
@@ -11,10 +11,10 @@
     <div class="menuPrincipal">
     </nav>
         <ul>
-            <a href="index.html">Menu</a>
-          <a href="assunto1.html">painel1</a>
-          <a href="assunto2.html">painel2</a>
-          <a href="assunto3.html">painel3</a>
+          <a href="index.html">Início</a>
+          <a href="assunto1.html">dificuldades</a>
+          <a href="assunto2.html">desigualdade</a>
+          <a href="assunto3.html">trágetoria</a>
           </ul>  
      </nav>
         </div>
