--- a/assunto2.html
+++ b/assunto2.html
@@ -35,7 +35,7 @@
         <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan
             2°I - 2023
         </p>
-        
       </footer>
+      <img id="desigualdade" src="desigualdade2.png">
 </body>
 </html>
