--- a/assunto3.html
+++ b/assunto3.html
@@ -21,9 +21,9 @@
         <div class="conteudo">
           <h1>Tragetória da luta dos direitos</h1>
       
-          <h2>Nesta página queremos encaminhar vcs leitores para um site onde explica sobre toda a tragetória das
-            mulheres até os dias de hoje
-            <a href="https://www.sescrio.org.br/noticias/assistencia/marco-delas-conheca-a-trajetoria-das-lutas-pelos-direitos-das-mulheres-no-brasil/">segue o link</a>
+          <h2>Nesta página queremos encaminhar vocês leitores para um site onde explica sobre toda a tragetória das
+            mulheres até os dias de hoje.
+            <a href="https://www.sescrio.org.br/noticias/assistencia/marco-delas-conheca-a-trajetoria-das-lutas-pelos-direitos-das-mulheres-no-brasil/" target="_blank">segue o link</a>
            </h2>
       
           </div>
