--- a/assunto2.html
+++ b/assunto2.html
@@ -14,7 +14,7 @@
           <a href="index.html">Início</a>
           <a href="assunto1.html">dificuldades</a>
           <a href="assunto2.html">desigualdade</a>
-          <a href="assunto3.html">trágetoria</a>
+          <a href="assunto3.html">trájetoria</a>
           </ul>  
      </nav>
         </div>
