--- a/assunto3.html
+++ b/assunto3.html
@@ -14,14 +14,20 @@
           <a href="index.html">Início</a>
           <a href="assunto1.html">dificuldades</a>
           <a href="assunto2.html">desigualdade</a>
-          <a href="assunto3.html">trágetoria</a>
+          <a href="assunto3.html">trájetoria</a>
           </ul>  
      </nav>
         </div>
         <div class="conteudo">
-          <h1>Tragetória da luta dos direitos</h1>
+          <h1>Trajetória da luta dos direitos</h1>
+          <h2>A luta por igualdade de direitos é longa e, a cada dia, um novo capítulo é escrito. No último, as mulheres conquistaram o direito de dirigir na Arábia Saudita.
+           Parece pequeno mas, para aquelas que dependiam do marido para ir e vir, é uma vitória inestimável.</h2>
+           <h2>Números comprovam essa impressão quando o Censo Demográfico 2010 apontou que 12,5% das mulheres acima de 25 anos completaram o ensino superior, contra o índice de 9,9% do sexo masculino.
+             Imagine como serão as estatísticas no Censo 2020!</h2>
+          <h2> Nas famílias, então, a postura de liderança da mulher é gritante! Várias delas são as responsáveis pelo sustento da casa conduzindo, sozinhas, a educação de seus filhos e dependentes. 
+            São exemplos fortes de que a ideia de sexo frágil está mais do que arcaica.</h2>
       
-          <h2>Nesta página queremos encaminhar vocês leitores para um site onde explica sobre toda a tragetória das
+          <h2>Nesta página queremos encaminhar vocês leitores para um site onde explica sobre toda a trajetória das
             mulheres até os dias de hoje.
             <a href="https://www.sescrio.org.br/noticias/assistencia/marco-delas-conheca-a-trajetoria-das-lutas-pelos-direitos-das-mulheres-no-brasil/" target="_blank">segue o link</a>
            </h2>
