--- a/assunto3.html
+++ b/assunto3.html
@@ -27,7 +27,7 @@
           <h2> Nas famílias, então, a postura de liderança da mulher é gritante! Várias delas são as responsáveis pelo sustento da casa conduzindo, sozinhas, a educação de seus filhos e dependentes. 
             São exemplos fortes de que a ideia de sexo frágil está mais do que arcaica.</h2>
       
-          <h2>Nesta página queremos encaminhar vocês leitores para um site onde explica sobre toda a trajetória das
+          <h2>Nesta página queremos encaminhar vocês leitores para um site onde é explicado mais afundo sobre toda a trajetória das
             mulheres até os dias de hoje.
             <a href="https://www.sescrio.org.br/noticias/assistencia/marco-delas-conheca-a-trajetoria-das-lutas-pelos-direitos-das-mulheres-no-brasil/" target="_blank">segue o link</a>
            </h2>
