--- a/assunto1.html
+++ b/assunto1.html
@@ -19,11 +19,19 @@
          </nav>
             </div>
     <div class="conteudo">
-        <h1>Desafio das mulheres na atualidade</h1>
+        <h1>dificuldades das mulheres</h1>
        <h2> É inegável que o século XX representou um grande avanço em relação aos direitos das mulheres. A constituição de 1934, por exemplo, promoveu, pela primeira vez, a igualdade entre os sexos.
          Já ao longo do século, as mulheres conquistaram através de muitas lutas outro direitos fundamentais, como a possibilidade de votar e ser votada, assim como a proibição da diferença salarial por motivo de sexo.
         </h2>
-    </div>
+        <h2>Embora tenham ocorrido avanços significativos nas últimas décadas em relação aos direitos das mulheres, ainda há muito a ser feito para garantir a igualdade de oportunidades
+     e de tratamento para todas as pessoas, independentemente do seu gênero.
+     Uma das principais dificuldades enfrentadas pelas mulheres é a violência de gênero. 
+     Isso inclui abuso físico, sexual e emocional, bem como assédio sexual e violência doméstica. Esses tipos de violência são extremamente prejudiciais
+      à saúde física e mental das mulheres e podem levar a consequências graves, como lesões físicas, trauma psicológico e até mesmo morte.
+      </h2>
+      <h2>Em resumo, as dificuldades enfrentadas pelas mulheres na sociedade são variadas e complexas. É importante que se continue a trabalhar em direção à igualdade de gênero e à eliminação de todas as formas de discriminação e violência contra as mulheres,
+         de modo que todas as pessoas possam desfrutar de oportunidades e tratamento iguais e justos.</h2>
+     </div>
     <footer class="rodape">
         <p>site feito pelas alunas Maria Ed. Maina e Yohana Brenzan
             2°I - 2023
