--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       </div>
  <div class="conteudo">
   <h1>O mundo das mulheres</h1>
+  <h2>O mundo das mulheres é um espaço diverso, complexo e multifacetado, onde cada indivíduo enfrenta desafios e experiências únicas.
+     Embora as mulheres representem metade da população global, muitas vezes enfrentam desigualdades de gênero que afetam suas vidas de maneiras diferentes.</h2>
     <h2> 
       No universo das mulheres, ainda existe muito preconceito e desrespeito na questão de serem assediadas 
       em empregos, dentro de casa, na rua e em outros diversos lugares, ganharem muitas vezes um salário menor do que os
