--- a/assunto2.html
+++ b/assunto2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="geral.css">
-    <title>Document</title>
+    <title>A desigualdade de gênero</title>
 </head>
 <body>
     <div class="menuPrincipal">
